--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
   <body>
     <div class="header">
       <h1>awilkesbooth</h1>
-      <a><h4>work</h4></a>
-      <a><h4>about</h4></a>
-      <a><h4>contact</h4></a>
+      <a>work</a>
+      <a>about</a>
+      <a>contact</a>
     </div>
     <div class="main-content">
-      <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-      <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-      <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+      <div class="work section" id="work">
+        <h2>work</h2>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+      </div>
+      <div class="about section" id="about">
+        <h2>about</h2>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+      </div>
+      <div class="contact section" id="contact">
+        <h2>contact</h2>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+      </div>
     </div>
   </body>
 </html>
