--- a/index.html
+++ b/index.html
@@ -7,31 +7,54 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <h1>awilkesbooth</h1>
-      <a>work</a>
-      <a>about</a>
-      <a>contact</a>
+    <div class="header-container">
+      <div class="header">
+        <h1>a wilkes booth</h1>
+        <a>work</a>
+        <a>about</a>
+        <a>contact</a>
+      </div>
+      <div class="surf-forecast">
+        Go surf - go work
+      </div>
     </div>
     <div class="main-content">
       <div class="work section" id="work">
-        <h2>work</h2>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <div class="header-container">
+          <h2>work</h2>
+        </div>
+        <div class="section-content">
+          <p>Stab Magazine:</p>
+          <p>Currently I am the only developer at Stab in addition to being the resident “tech guy”. Some highlights include building most of the current site, implementing a paywall and over seeing the transfer of 14,000 article post to Wordpress. If it mildly tech based, I have touched it. 
+          </p>
+          <p>Gmail business set up, securing domains, hosting, custom themes, Google ad units, Google Analytics event tracking and E-commerce, Shopify Implementation, CDNs, live scoring, custom plugin development, microsite </p>
+          <p>Check it out here: stabmag.com & surf100.tv</p>
+        </div>
       </div>
       <div class="about section" id="about">
-        <h2>about</h2>
-        <div class="ocracoke-img"></div>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <div class="ocracoke-img">
+          <div class="opacity-wrap">
+            <h2>Hi, I’m Wilkes</h2>
+            <div class="section-content">
+              <p>
+                One story about writing a creative brief for birdseed. That was enough to make me reconsider using my advertising degree. After a while I realized how much I loved building, problem solving and continual learning.
+                  I started looking for a career that would challenge me in those areas. The more development I did, the more I excited I got. I still feel that way now 2+ years later.  
+              </p>
+              <p>
+                After hours (sometimes before), I like to surf.  
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="contact section" id="contact">
-        <h2>contact</h2>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
-        <p>Blown out wave of the winter coil up glass elevator drop split the peak deadly, sand bottom keyhole drainer. Mental dry hair paddle out combos rippin finner blitz. Split the peak combination making it rain thick good catching some shade smooth, psyched. Shaka radical salt water transition snap pigdog big finner waist high pumping, firing shorebreak. Twin fin combination double up frothing over the reef pitter set wave indy.</p>
+        <div class="header-container">
+          <h2>contact</h2>
+        </div>
+        <div class="section-content">
+          <p>email</p>
+          <p>resume download here</p>
+        </div>
       </div>
     </div>
   </body>
