init - nav links updated

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="header-container">
       <div class="header">
-        <h1>a wilkes booth</h1>
-        <a>work</a>
-        <a>about</a>
-        <a>contact</a>
+        <a href="#"><h1>a wilkes booth</h1></a>
+        <a href="#work">work</a>
+        <a href="#about">about</a>
+        <a href="#contact">contact</a>
       </div>
       <div class="surf-forecast">
         Go surf - go work
@@ -25,7 +25,9 @@
         </div>
         <div class="section-content">
           <p>Stab Magazine:</p>
-          <p>Currently I am the only developer at Stab in addition to being the resident “tech guy”. Some highlights include building most of the current site, implementing a paywall and over seeing the transfer of 14,000 article post to Wordpress. If it mildly tech based, I have touched it. 
+          <p>
+            Stab is a surf focused online publication with over half a million monthly views. Developed and launched entirely new Wordpress site.
+             Handled transfer of 14,000 articles between CMS platforms. Enabled paywall with 10,000 paying subscribers. Worked with live scoring events, Shopify, Google Analytics and ad implementation as well.
           </p>
           <p>Gmail business set up, securing domains, hosting, custom themes, Google ad units, Google Analytics event tracking and E-commerce, Shopify Implementation, CDNs, live scoring, custom plugin development, microsite </p>
           <p>Check it out here: stabmag.com & surf100.tv</p>
