--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="section-content">
           <p>Stab Magazine:</p>
-          <p>Currently I am the only developer at Stab in addition to being the resident “tech guy”. Some highlights include building most of the current site, implementing a paywall and over seeing the transfer of 14,000 article post to Wordpress. If it mildly tech based, I have touched it. 
+          <p>testing...Currently I am the only developer at Stab in addition to being the resident “tech guy”. Some highlights include building most of the current site, implementing a paywall and over seeing the transfer of 14,000 article post to Wordpress. If it mildly tech based, I have touched it. 
           </p>
           <p>Gmail business set up, securing domains, hosting, custom themes, Google ad units, Google Analytics event tracking and E-commerce, Shopify Implementation, CDNs, live scoring, custom plugin development, microsite </p>
           <p>Check it out here: stabmag.com & surf100.tv</p>
