surf report copy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#contact">contact</a>
       </div>
       <div class="surf-forecast">
-        <p>Surf Report - Coming Soon</p>
+        <p>surf report - coming soon</p>
       </div>
     </div>
     <div class="main-content">
@@ -23,7 +23,7 @@
         <div class="header-container">
           <h2>work</h2>
         </div>
-        <p class="header-container skills">skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native & more</p>
+        <p class="header-container skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native & more</p>
         <div class="section-content">
           <div class="job">
             <div class="job-header">
@@ -40,7 +40,7 @@
               <li>Dealt with custom email, hosting, domain recovery, DNS and CDN implementation </li>
               <li>Anything mildly technical, I have worked with</li>
             </ul>
-            <p>Check it out: <a href="stabmag.com">stabmag.com</a> & <a href="surf100.tv">surf100.tv</a></p>
+            <p>Check it out: <a href="https://stabmag.com/">stabmag.com</a> & <a href="https://www.surf100.tv/">surf100.tv</a></p>
           </div>
           <div class="job">
             <div class="job-header">
