--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>awilkesbooth</title>
+    <title>a. wilkes .booth</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="header-container">
@@ -23,7 +24,7 @@
         <div class="header-container">
           <h2>work</h2>
         </div>
-        <p class=" skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native & <a href="assets/wilkesboothresume.pdf" download>more</a></p>
+        <p class=" skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native, Adobe Creative Cloud, Version Control & <a href="assets/wilkesboothresume.pdf" download>more</a></p>
         <div class="section-content">
           <div class="job">
             <div class="job-header">
