--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>a. wilkes .booth</title>
+    <title>a. wilkes booth</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -24,7 +24,7 @@
         <div class="header-container">
           <h2>work</h2>
         </div>
-        <p class=" skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native, Adobe Creative Cloud, Version Control & <a href="assets/wilkesboothresume.pdf" download>more</a></p>
+        <p class=" skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native, Adobe Creative Cloud, Git Workflow & <a href="assets/wilkesboothresume.pdf" download>more</a></p>
         <div class="section-content">
           <div class="job">
             <div class="job-header">
@@ -34,14 +34,13 @@
               <p><span>Tech:</span> Php, HTML5, CSS3, React, Javascript</p>
             </div>
             <ul>
-              <li>Developed and launched entirely new Wordpress site</li>
+              <li>Developed and launched custom Wordpress theme</li>
               <li>Handled transfer of 14,000 articles between CMS platforms</li>
-              <li>Enabled paywall for 10,000 paying subscribers</li>
+              <li>Implemented paywal for 10,000+</li>
               <li>Worked with live scoring events, Shopify, Google Analytics and ad implementation</li>
               <li>Dealt with custom email, hosting, domain recovery, DNS and CDN implementation </li>
-              <li>Anything mildly technical, I have worked with</li>
             </ul>
-            <p>Check it out: <a href="https://stabmag.com/">stabmag.com</a> & <a href="https://www.surf100.tv/">surf100.tv</a></p>
+            <p>Check it out: <a href="https://stabmag.com/" target="_blank">stabmag.com</a> & <a href="https://www.surf100.tv/" target="_blank">surf100.tv</a></p>
           </div>
           <div class="job">
             <div class="job-header">
@@ -50,12 +49,12 @@
                 An app for caretakers that tracks patients habits, bodily functions and experiences.
               </p>
               <p><span>Web Developer:</span> April 2020</p>
-              <p><span>Tech:</span> React Native, React, HTML5, CSS3</p>
+              <p><span>Tech:</span> React Native, React, CSS3</p>
             </div>
             <ul>
               <li>Developed components for the mobile app that was accepted into the Apple and Android store</li>
             </ul>
-            <p>Check it out: <a href="https://www.getmayacare.com/learn">getmayacare.com/learn</a></p>
+            <p>Check it out: <a href="https://www.getmayacare.com/learn" target="_blank">getmayacare.com/learn</a></p>
           </div>
         </div>
       </div>
@@ -74,7 +73,7 @@
               </p>
             </div>
           </div>
-          <p class="photo-credit">Photo By:<a href="https://swellstudio.online/">Aprille Zammit</a></p>
+          <p class="photo-credit">Photo By:<a target="_blank" href="https://swellstudio.online/">Aprille Zammit</a></p>
         </div>
       </div>
       <div class="contact section" id="contact">
@@ -84,8 +83,8 @@
         <div class="section-content">          
           <p><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm1 16.057v-3.057h2.994c-.059 1.143-.212 2.24-.456 3.279-.823-.12-1.674-.188-2.538-.222zm1.957 2.162c-.499 1.33-1.159 2.497-1.957 3.456v-3.62c.666.028 1.319.081 1.957.164zm-1.957-7.219v-3.015c.868-.034 1.721-.103 2.548-.224.238 1.027.389 2.111.446 3.239h-2.994zm0-5.014v-3.661c.806.969 1.471 2.15 1.971 3.496-.642.084-1.3.137-1.971.165zm2.703-3.267c1.237.496 2.354 1.228 3.29 2.146-.642.234-1.311.442-2.019.607-.344-.992-.775-1.91-1.271-2.753zm-7.241 13.56c-.244-1.039-.398-2.136-.456-3.279h2.994v3.057c-.865.034-1.714.102-2.538.222zm2.538 1.776v3.62c-.798-.959-1.458-2.126-1.957-3.456.638-.083 1.291-.136 1.957-.164zm-2.994-7.055c.057-1.128.207-2.212.446-3.239.827.121 1.68.19 2.548.224v3.015h-2.994zm1.024-5.179c.5-1.346 1.165-2.527 1.97-3.496v3.661c-.671-.028-1.329-.081-1.97-.165zm-2.005-.35c-.708-.165-1.377-.373-2.018-.607.937-.918 2.053-1.65 3.29-2.146-.496.844-.927 1.762-1.272 2.753zm-.549 1.918c-.264 1.151-.434 2.36-.492 3.611h-3.933c.165-1.658.739-3.197 1.617-4.518.88.361 1.816.67 2.808.907zm.009 9.262c-.988.236-1.92.542-2.797.9-.89-1.328-1.471-2.879-1.637-4.551h3.934c.058 1.265.231 2.488.5 3.651zm.553 1.917c.342.976.768 1.881 1.257 2.712-1.223-.49-2.326-1.211-3.256-2.115.636-.229 1.299-.435 1.999-.597zm9.924 0c.7.163 1.362.367 1.999.597-.931.903-2.034 1.625-3.257 2.116.489-.832.915-1.737 1.258-2.713zm.553-1.917c.27-1.163.442-2.386.501-3.651h3.934c-.167 1.672-.748 3.223-1.638 4.551-.877-.358-1.81-.664-2.797-.9zm.501-5.651c-.058-1.251-.229-2.46-.492-3.611.992-.237 1.929-.546 2.809-.907.877 1.321 1.451 2.86 1.616 4.518h-3.933z"/></svg><a href="mailto:andersonwilkesbooth@gmail.com">email</a></p>
           <p><svg  xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M22 0h-20v24h14l6-6v-18zm-6 18h4.36l-4.36 4.385v-4.385zm-3 1h-8v1h8v-1zm0-3h-8v1h8v-1zm6-2v-1h-14v1h14zm-7.059-4.968c-1.147-.265-2.214-.497-1.697-1.473 1.573-2.97.417-4.559-1.244-4.559-1.694 0-2.821 1.65-1.244 4.559.532.982-.575 1.214-1.697 1.473-1.024.237-1.062.745-1.059 1.635l.001.333h7.997l.001-.323c.004-.896-.03-1.407-1.058-1.645zm7.059.968h-4v1h4v-1zm0-2v-1h-4v1h4zm0-4h-4v1h4v-1z"/></svg><a href="assets/wilkesboothresume.pdf" download>resume</a></p>
-          <p><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg><a href="https://github.com/boothaw">github</a></p>
-          <p><img src="assets/linkedin.png"/><a href="https://www.linkedin.com/in/wilkes-booth-56310bb4/">linkedin</a></p>
+          <p><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg><a href="https://github.com/boothaw" target="_blank">github</a></p>
+          <p><img src="assets/linkedin.png"/><a href="https://www.linkedin.com/in/wilkes-booth-56310bb4/" target="_blank">linkedin</a></p>
         </div>
       </div>
     </div>
