added sass - reformatted for mobile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="about section" id="about">
         <div class="ocracoke-img">
-          <div class="opacity-wrap">
+          <div class="about-copy">
             <h2>Hi, I’m Wilkes</h2>
             <div class="section-content">
               <p>
