--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="result work">Keep working</p>
           <p class="check-button">Surf Check at S-Turns</p>
         </div>
-        <p class="sponsored" >Powered by <a href="https://www.surfline.com/">Surfline</a></p>
+        <p class="sponsored" >Powered by the <a href="https://www.surfline.com/">Surfline</a> API</p>
       </div>
     </div>
     <div class="main-content">
