--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
               <li>Developed and launched custom Wordpress theme</li>
               <li>Handled transfer of 14,000 articles between CMS platforms</li>
-              <li>Implemented paywal for 10,000+</li>
+              <li>Implemented paywall for 10,000+</li>
               <li>Worked with live scoring events, Shopify, Google Analytics and ad implementation</li>
               <li>Dealt with custom email, hosting, domain recovery, DNS and CDN implementation </li>
             </ul>
