--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p>
                 One story about writing creative briefs for birdseed was enough to make me reconsider using my advertising degree.
                  I loved building and problem solving in a fast paced environment, but needed a different avenue.
-                  After finding development, the more I did, the more I excited I got. I continue to feel that way 2+ years later with more than a year of full time experience.
+                  After finding development, the more I did, the more excited I got. I continue to feel that way 2+ years later with more than a year of full time experience.
               </p>
               <p>
                 After hours (sometimes before), I like to surf.  
