added ivet360 copy & styling to about section copy

--- a/index.html
+++ b/index.html
@@ -27,9 +27,28 @@
         <div class="section-content">
           <div class="job">
             <div class="job-header">
+              <h3>iVET360</h3>
+              <p class="co-description">One stop shop for marketing, creative, analytics and HR training services for veterinary hospitals.</p>
+              <p><span>Front End Developer:</span> October 2021 - Present</p>
+              <p><span>Tech:</span> Php, HTML5, CSS3, Javascript</p>
+            </div>
+            <ul>
+              <li>Built reusable themes, components and plugins</li>
+              <li>Designed and implemented a teamwide workflow for local developement</li>
+              <li>Modernized tech stack</li>
+              <li>Interviewed and assisted interns</li>
+            </ul>
+            <p>Check it out:</p>
+            <p><a href="https://jacksonhwyvetclinic.com/" target="_blank">https://jacksonhwyvetclinic.com/</a></p>
+            <p><a href="https://turkeycreekvets.com/" target="_blank">https://turkeycreekvets.com/</a></p>
+            <p><a href="https://narravet.com/" target="_blank">https://narravet.com/</a></p>
+            <p><a href="https://ivet360.com/" target="_blank">https://ivet360.com/</a></p>
+          </div>
+          <div class="job">
+            <div class="job-header">
               <h3>Stab Magazine</h3>
               <p class="co-description">A surf focused online publication with over half a million monthly views.</p>
-              <p><span>Web Developer:</span> June 2020 - Present</p>
+              <p><span>Web Developer:</span> June 2020 - August 2022</p>
               <p><span>Tech:</span> Php, HTML5, CSS3, React, Javascript</p>
             </div>
             <ul>
