fixed text shadow and updated example ivet sites

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <li>Interviewed and assisted interns</li>
             </ul>
             <p>Check it out:</p>
-            <p><a href="https://jacksonhwyvetclinic.com/" target="_blank">https://jacksonhwyvetclinic.com/</a></p>
-            <p><a href="https://turkeycreekvets.com/" target="_blank">https://turkeycreekvets.com/</a></p>
-            <p><a href="https://narravet.com/" target="_blank">https://narravet.com/</a></p>
-            <p><a href="https://ivet360.com/" target="_blank">https://ivet360.com/</a></p>
+            <p><a href="jacksonhwyvetclinic.com" target="_blank">https://jacksonhwyvetclinic.com/</a></p>
+            <p><a href="turkeycreekvets.com" target="_blank">https://turkeycreekvets.com/</a></p>
+            <p><a href="narravet.com" target="_blank">https://narravet.com/</a></p>
+            <p><a href="ivet360.com" target="_blank">https://ivet360.com/</a></p>
           </div>
           <div class="job">
             <div class="job-header">
