updated styling and fonts

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 	<title>a. wilkes booth</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Portfolio for A. Wilkes Booth. Welcome.">
-	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+	<meta name="description" content="Wilkes Booth | Portfolio | Welcome">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 
