updated fonts and styles

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Wilkes Booth | Portfolio | Welcome">
-	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"> -->
 	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 
@@ -46,7 +43,7 @@
 						<li>Modernized tech stack</li>
 						<li>Interviewed and assisted interns</li>
 					</ul>
-					<p>Check it out:</p>
+					<p class="check-it">Check it out:</p>
 					<p><a href="https://turkeycreekvets.com/" target="_blank">turkeycreekvets.com</a></p>
 					<p><a href="https://jacksonhwyvetclinic.com/" target="_blank">jacksonhwyvetclinic.com</a></p>
 					<p><a href="https://narravet.com/" target="_blank">narravet.com</a></p>
@@ -67,8 +64,10 @@
 						<li>Worked with live scoring events, Shopify, Google Analytics and ad implementation</li>
 						<li>Dealt with custom email, hosting, domain recovery, DNS and CDN implementation </li>
 					</ul>
-					<p>Check it out: <a href="https://stabmag.com/" target="_blank">stabmag.com</a> & <a
-							href="https://www.surf100.tv/" target="_blank">surf100.tv</a></p>
+					<p class="check-it">Check it out: <a href="https://stabmag.com/"
+							target="_blank">stabmag.com</a><span> &</span>
+						<a href="https://www.surf100.tv/" target="_blank">surf100.tv</a>
+					</p>
 				</div>
 				<div class="job">
 					<div class="job-header">
@@ -83,7 +82,7 @@
 						<li>Developed components for the mobile app that was accepted into the Apple and Android store
 						</li>
 					</ul>
-					<p>Check it out: <a href="https://www.getmayacare.com/learn"
+					<p class="check-it">Check it out: <a href="https://www.getmayacare.com/learn"
 							target="_blank">getmayacare.com/learn</a></p>
 				</div>
 			</div>
