updated ivet copy, added pool counter and changed text overlay styles

--- a/index.html
+++ b/index.html
@@ -26,9 +26,25 @@
 			<div class="header-container">
 				<h2>work</h2>
 			</div>
-			<p class="skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, React Native, Adobe Creative
-				Cloud, Git Workflow & <a href="assets/wilkesboothresume.pdf" download>more (resume download)</a></p>
+			<p class="skills">Skilled in: Php, HTML5, CSS3, React, Javascript, Wordpress, Git Workflow, GraphQL, Prisma,
+				React Native
+				& <a href="assets/wilkesboothresume.pdf" download>more (resume download)</a></p>
 			<div class="section-content">
+				<div class="job">
+					<div class="job-header">
+						<h3>Straight Pool Counter</h3>
+						<p class="co-description">
+							A simple counter that keeps track of how badly your friends are beating you
+							at straight
+							pool.
+						</p>
+						<p><span>Developer & Designer:</span> March 2023</p>
+						<p><span>Tech:</span> React, HTML5, CSS3</p>
+						<p class="check-it">Check it out:</p>
+						<p><a href="https://straightpoolcounter.com/"
+								target="_blank">https://straightpoolcounter.com/</a></p>
+					</div>
+				</div>
 				<div class="job">
 					<div class="job-header">
 						<h3>iVET360</h3>
@@ -40,13 +56,13 @@
 					<ul>
 						<li>Built reusable themes, components and plugins</li>
 						<li>Designed and implemented a teamwide workflow for local development</li>
-						<li>Modernized tech stack</li>
+						<li>Managed 350+ sites </li>
 						<li>Interviewed and assisted interns</li>
 					</ul>
 					<p class="check-it">Check it out:</p>
 					<p><a href="https://turkeycreekvets.com/" target="_blank">turkeycreekvets.com</a></p>
 					<p><a href="https://jacksonhwyvetclinic.com/" target="_blank">jacksonhwyvetclinic.com</a></p>
-					<p><a href="https://narravet.com/" target="_blank">narravet.com</a></p>
+					<p><a href="https://wildwoodvet.com/" target="_blank">wildwoodvet.com/</a></p>
 					<p><a href="https://ivet360.com/" target="_blank">ivet360.com</a></p>
 				</div>
 				<div class="job">
@@ -54,15 +70,18 @@
 						<h3>Stab Magazine</h3>
 						<p class="co-description">A surf focused online publication with over half a million monthly
 							views.</p>
-						<p><span>Web Developer:</span> June 2020 - August 2022</p>
+						<p><span>Web Developer:</span> June 2020 - May 2023</p>
 						<p><span>Tech:</span> Php, HTML5, CSS3, React, Javascript</p>
 					</div>
 					<ul>
 						<li>Developed and launched custom Wordpress theme</li>
 						<li>Handled transfer of 14,000 articles between CMS platforms</li>
-						<li>Implemented paywall for 10,000+</li>
-						<li>Worked with live scoring events, Shopify, Google Analytics and ad implementation</li>
-						<li>Dealt with custom email, hosting, domain recovery, DNS and CDN implementation </li>
+						<li>Implemented paywall for 15,000+ paying subscribers that increased revenue by over $1
+							million in the first year
+						</li>
+						<li>Worked with large scale live scoring events, Shopify, Google Analytics and ad implementation
+						</li>
+						<li>Dealt with custom email, hosting, DNS and CDN implementation</li>
 					</ul>
 					<p class="check-it">Check it out: <a href="https://stabmag.com/"
 							target="_blank">stabmag.com</a><span> &</span>
@@ -93,12 +112,8 @@
 					<h2>Hi, I’m Wilkes</h2>
 					<div class="section-content">
 						<p>
-							One story about writing creative briefs for birdseed was enough to make me reconsider using
-							my advertising degree.
-							I loved building and problem solving in a fast paced environment, but needed a different
-							avenue.
-							After finding development, the more I did, the more excited I got. I continue to feel that
-							way over 2 years later.
+							Simply put, I like to make things with code. Having learned most of my skills the hard way,
+							I’m always excited to work with others on projects.
 						</p>
 						<p>
 							After hours (sometimes before), I like to surf.
