--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 						<p><span>Developer & Designer:</span> March 2023</p>
 						<p><span>Tech:</span> React, HTML5, CSS3</p>
 						<p class="check-it">Check it out:</p>
-						<p><a href="https://straightpoolcounter.com/"
-								target="_blank">https://straightpoolcounter.com/</a></p>
+						<p><a href="https://straightpoolcounter.com/" target="_blank">straightpoolcounter.com</a></p>
 					</div>
 				</div>
 				<div class="job">
@@ -62,7 +61,7 @@
 					<p class="check-it">Check it out:</p>
 					<p><a href="https://turkeycreekvets.com/" target="_blank">turkeycreekvets.com</a></p>
 					<p><a href="https://jacksonhwyvetclinic.com/" target="_blank">jacksonhwyvetclinic.com</a></p>
-					<p><a href="https://wildwoodvet.com/" target="_blank">wildwoodvet.com/</a></p>
+					<p><a href="https://wildwoodvet.com/" target="_blank">wildwoodvet.com</a></p>
 					<p><a href="https://ivet360.com/" target="_blank">ivet360.com</a></p>
 				</div>
 				<div class="job">
