--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						</p>
 						<p><span>Developer & Designer:</span> March 2023</p>
 						<p><span>Tech:</span> React, HTML5, CSS3</p>
-						<p class="check-it">Check it out:</p>
-						<p><a href="https://straightpoolcounter.com/" target="_blank">straightpoolcounter.com</a></p>
+						< class="check-it">Check it out: <a href="https://straightpoolcounter.com/"
+								target="_blank">straightpoolcounter.com</a></p>
 					</div>
 				</div>
 				<div class="job">
