--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</p>
 						<p><span>Developer & Designer:</span> March 2023</p>
 						<p><span>Tech:</span> React, HTML5, CSS3</p>
-						< class="check-it">Check it out: <a href="https://straightpoolcounter.com/"
+						<p class="check-it">Check it out: <a href="https://straightpoolcounter.com/"
 								target="_blank">straightpoolcounter.com</a></p>
 					</div>
 				</div>
