--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 					<ul>
 						<li>Built reusable themes, components and plugins</li>
 						<li>Designed and implemented a teamwide workflow for local development</li>
-						<li>Managed 350+ sites </li>
+						<li>Built and launched over 70 sites</li>
+						<li>Managed 350+ sites</li>
 						<li>Interviewed and assisted interns</li>
 					</ul>
 					<p class="check-it">Check it out:</p>
