january copy updates - about, ivet360 & stab date

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 					<ul>
 						<li>Built reusable themes, components and plugins</li>
 						<li>Designed and implemented a teamwide workflow for local development</li>
-						<li>Built and launched over 70 sites</li>
-						<li>Managed 350+ sites</li>
-						<li>Interviewed and assisted interns</li>
+						<li>Built and launched over 100 sites</li>
+						<li>Managed 400+ sites</li>
+						<li>Interviewed and mentored interns</li>
 					</ul>
 					<p class="check-it">Check it out:</p>
 					<p><a href="https://turkeycreekvets.com/" target="_blank">turkeycreekvets.com</a></p>
@@ -70,7 +70,7 @@
 						<h3>Stab Magazine</h3>
 						<p class="co-description">A surf focused online publication with over half a million monthly
 							views.</p>
-						<p><span>Web Developer:</span> June 2020 - May 2023</p>
+						<p><span>Web Developer:</span> July 2020 - May 2023</p>
 						<p><span>Tech:</span> Php, HTML5, CSS3, React, Javascript</p>
 					</div>
 					<ul>
@@ -112,8 +112,8 @@
 					<h2>Hi, I’m Wilkes</h2>
 					<div class="section-content">
 						<p>
-							Simply put, I like to make things with code. Having learned most of my skills the hard way,
-							I’m always excited to work with others on projects.
+							Hi, I’m Wilkes. Simply put, I like to create quality experiences with code. I’m always
+							interested in trying new tech, working with others and accomplishing challenging tasks.
 						</p>
 						<p>
 							After hours (sometimes before), I like to surf.
