updated resume and added aprille's site

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 			<div class="section-content">
 				<div class="job">
 					<div class="job-header">
-						<h3>Straight Pool Counter</h3>
+						<h3>Aprille Zammit - Studio | Portfolio</h3>
 						<p class="co-description">
-							A simple counter that keeps track of how badly your friends are beating you
-							at straight
-							pool.
+							Fullstack web app built with RedwoodJS showcasing beautiful screenprinting, photography,
+							projects and
+							workshops.
 						</p>
-						<p><span>Developer & Designer:</span> March 2023</p>
-						<p><span>Tech:</span> React, HTML5, CSS3</p>
-						<p class="check-it">Check it out: <a href="https://straightpoolcounter.com/"
-								target="_blank">straightpoolcounter.com</a></p>
+						<p><span>Full-Stack Developer</span> Janaury 2024</p>
+						<p><span>Tech:</span> React, GraphQL, Prisma, Auth0 and Netlify</p>
+						<p class="check-it">Check it out: <a href="https://aprillezammit.com/"
+								target="_blank">aprillezammit.com</a></p>
 					</div>
 				</div>
 				<div class="job">
@@ -49,7 +49,7 @@
 						<h3>iVET360</h3>
 						<p class="co-description">One stop shop for marketing, creative, analytics and HR training
 							services for veterinary hospitals.</p>
-						<p><span>Front End Developer:</span> October 2021 - Present</p>
+						<p><span>Front-End Developer:</span> October 2021 - Present</p>
 						<p><span>Tech:</span> Php, HTML5, CSS3, Javascript</p>
 					</div>
 					<ul>
@@ -64,6 +64,20 @@
 					<p><a href="https://jacksonhwyvetclinic.com/" target="_blank">jacksonhwyvetclinic.com</a></p>
 					<p><a href="https://wildwoodvet.com/" target="_blank">wildwoodvet.com</a></p>
 					<p><a href="https://ivet360.com/" target="_blank">ivet360.com</a></p>
+				</div>
+				<div class="job">
+					<div class="job-header">
+						<h3>Straight Pool Counter</h3>
+						<p class="co-description">
+							A simple counter that keeps track of how badly your friends are beating you
+							at straight
+							pool utilizing React and local storage.
+						</p>
+						<p><span>Developer & Designer:</span> March 2023</p>
+						<p><span>Tech:</span> React, HTML5, CSS3</p>
+						<p class="check-it">Check it out: <a href="https://straightpoolcounter.com/"
+								target="_blank">straightpoolcounter.com</a></p>
+					</div>
 				</div>
 				<div class="job">
 					<div class="job-header">
@@ -112,7 +126,7 @@
 					<h2>Hi, I’m Wilkes</h2>
 					<div class="section-content">
 						<p>
-							Hi, I’m Wilkes. Simply put, I like to create quality experiences with code. I’m always
+							Hi, I’m Wilkes. Simply put, I like to create high quality experiences with code. I’m always
 							interested in trying new tech, working with others and accomplishing challenging tasks.
 						</p>
 						<p>
